--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,12 +19,33 @@ android {
     }
 }
 
+repositories {
+    mavenCentral()
+}
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    })
+
+    // Support libs
     compile 'com.android.support:appcompat-v7:25.3.1'
+
+    // Play Services
     compile 'com.google.android.gms:play-services-maps:11.0.1'
+
+    // JUnit
     testCompile 'junit:junit:4.12'
+
+    // RxJava 2.0
+    compile "io.reactivex.rxjava2:rxjava:2.1.0"
+    compile 'io.reactivex.rxjava2:rxkotlin:2.0.3'
+    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
+
+    // Mockito
+    testCompile "org.mockito:mockito-core:2.8.9"
+    testCompile "com.nhaarman:mockito-kotlin:1.5.0"
+
+    // Dagger
+    compile 'com.google.dagger:dagger:2.11'
+    kapt 'com.google.dagger:dagger-compiler:2.11'
+    provided 'javax.annotation:jsr250-api:1.0'
 }
