--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,11 +41,11 @@ dependencies {
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
 
     // Mockito
-    testCompile "org.mockito:mockito-core:2.8.9"
+    testCompile "org.mockito:mockito-core:2.8.47"
     testCompile "com.nhaarman:mockito-kotlin:1.5.0"
 
     // Dagger
     compile 'com.google.dagger:dagger:2.11'
-    kapt 'com.google.dagger:dagger-compiler:2.11'
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.11'
     provided 'javax.annotation:jsr250-api:1.0'
 }
