--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,10 +21,6 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-
-    sourceSets {
-        main.java.srcDirs += 'src/main/kotlin'
-    }
 }
 
 repositories {
@@ -40,6 +36,7 @@ dependencies {
 
     // Play Services
     compile 'com.google.android.gms:play-services-maps:11.0.1'
+    compile 'com.google.android.gms:play-services-location:11.0.1'
 
     // JUnit
     testCompile 'junit:junit:4.12'
@@ -61,6 +58,6 @@ dependencies {
 
     // Dagger
     compile 'com.google.dagger:dagger:2.11'
-    annotationProcessor 'com.google.dagger:dagger-compiler:2.11'
+    kapt 'com.google.dagger:dagger-compiler:2.11'
     provided 'javax.annotation:jsr250-api:1.0'
 }
