--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,8 +12,6 @@ android {
         versionCode 1
         versionName "1.0"
         multiDexEnabled true
-
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
 
     buildTypes {
@@ -34,6 +32,7 @@ dependencies {
 
     // Support libs
     compile 'com.android.support:appcompat-v7:25.3.1'
+    compile 'com.android.support:design:25.3.1'
 
     // Play Services
     compile 'com.google.android.gms:play-services-maps:11.0.1'
