--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,10 @@ repositories {
     jcenter()
 }
 
+kapt {
+    generateStubs = true
+}
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
 
